# life

./: .copier-answers.yml  .gitignore  LICENSE  README.md  life.ipynb  life.py  project_setup.md  pyproject.toml
docs/: life.ipynb  output.txt
src/life/: .gitignore  __init__.py  life.py
tests/data/: 1000x1000_0.1.txt  1000x1000_output.txt  matrix.txt
